refs #104935: fixing stories rotator spacing for static home page.

--- a/drupal/sites/all/themes/leidos/css/main.css
+++ b/drupal/sites/all/themes/leidos/css/main.css
@@ -10486,16 +10486,18 @@ body.hasParallax .parallax-mobile {
 /* line 13, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-slide .storiesCarousel__image {
   display: inline-block;
-  margin: 5% 15%;
+  height: auto;
+  margin: 6% 12%;
+  max-width: 340px;
   vertical-align: middle;
 }
-/* line 18, sass/partials/modules/_static-stories-carousel.scss */
+/* line 20, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel__meta {
   display: inline-block;
   vertical-align: middle;
-  width: 30%;
+  width: 40%;
 }
-/* line 23, sass/partials/modules/_static-stories-carousel.scss */
+/* line 25, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel__meta h2 {
   font-family: AvenirLT-Book, Arial, sans-serif;
   font-size: 40px;
@@ -10504,7 +10506,7 @@ body.hasParallax .parallax-mobile {
   margin-bottom: 22px;
   margin-top: 0;
 }
-/* line 31, sass/partials/modules/_static-stories-carousel.scss */
+/* line 33, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel__meta h3 {
   color: #8b8b8b;
   font-family: AvenirLT-Book, Arial, sans-serif;
@@ -10512,11 +10514,11 @@ body.hasParallax .parallax-mobile {
   line-height: 1.6em;
   margin-bottom: 30px;
 }
-/* line 38, sass/partials/modules/_static-stories-carousel.scss */
+/* line 40, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel__meta a {
   font-size: 12px;
 }
-/* line 43, sass/partials/modules/_static-stories-carousel.scss */
+/* line 45, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-prev,
 .staticContent .storiesCarousel .slick-next {
   background: url(https://www.leidos.com/sites/all/themes/leidos/images/sprites/sprites-s6882c8ed69.png) no-repeat;
@@ -10531,21 +10533,21 @@ body.hasParallax .parallax-mobile {
           transform: translateY(-50%);
   width: 41px;
 }
-/* line 55, sass/partials/modules/_static-stories-carousel.scss */
+/* line 57, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-prev {
   background-position: 0 -424px;
   left: 0;
 }
-/* line 59, sass/partials/modules/_static-stories-carousel.scss */
+/* line 61, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-prev:hover {
   background-position: 0 -222px;
 }
-/* line 63, sass/partials/modules/_static-stories-carousel.scss */
+/* line 65, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-next {
   background-position: 0 -727px;
   right: 0;
 }
-/* line 67, sass/partials/modules/_static-stories-carousel.scss */
+/* line 69, sass/partials/modules/_static-stories-carousel.scss */
 .staticContent .storiesCarousel .slick-next:hover {
   background-position: 0 -525px;
 }
@@ -10554,34 +10556,34 @@ body.hasParallax .parallax-mobile {
   .staticContent .storiesCarousel {
     background: transparent;
   }
-  /* line 77, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 79, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel .slick-slide .storiesCarousel__image {
     display: block;
     margin: 5% auto;
   }
-  /* line 81, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 83, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel__meta {
     display: block;
     padding: 0 5% 60px 5%;
     text-align: center;
     width: 100%;
   }
-  /* line 87, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 89, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel .slick-prev,
   .staticContent .storiesCarousel .slick-next {
     top: 35%;
   }
 }
 @media only screen and (max-width: 720px) {
-  /* line 96, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 98, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel .slick-slide .storiesCarousel__image {
     max-width: 75%;
   }
-  /* line 100, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 102, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel__meta h2 {
     font-size: 30px;
   }
-  /* line 104, sass/partials/modules/_static-stories-carousel.scss */
+  /* line 106, sass/partials/modules/_static-stories-carousel.scss */
   .staticContent .storiesCarousel .slick-prev,
   .staticContent .storiesCarousel .slick-next {
     top: 24%;
