--- a/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-stories-carousel.scss
+++ b/drupal/sites/all/themes/leidos/css/sass/partials/modules/_static-stories-carousel.scss
@@ -12,13 +12,15 @@
     }
     .slick-slide .#{$storiesCarousel}__image {
         display: inline-block;
-        margin: 5% 15%;
+        height: auto;
+        margin: 6% 12%;
+        max-width: 340px;
         vertical-align: middle;
     }
     &__meta {
         display: inline-block;
         vertical-align: middle;
-        width: 30%;
+        width: 40%;
 
         h2 {
             font-family: AvenirLT-Book, Arial, sans-serif;
